[project]
name = "pubmed-paper-fetcher-venkat"
version = "0.1.0.post1"
description = "Fetch PubMed papers with non-academic authors"
authors = [
    { name = "Venkatramireddy", email = "venkatramireddyvatrapu3@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "requests>=2.32.4,<3.0.0",
    "lxml>=6.0.0,<7.0.0",
    "click>=8.2.1,<9.0.0"
]

[tool.poetry]
packages = [{ include = "pubmed_fetcher" }]

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"

[tool.poetry.scripts]
get-papers-list = "pubmed_fetcher.cli:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
